Remove new Integer(..) call
Change-Id: I397c7e832cb83aaccad11ec15fc1ed68223a8e51
Signed-off-by: Olivier Thomann <Olivier_Thomann@ca.ibm.com>